# ccmux

./: .gitignore  AGENT-COUNCIL.md  AGENTS.md  Cargo.toml  DEMO-MULTI-AGENT.md  DEMO.md  Makefile  QA-CHECKLIST.md  README.md  SESSION.md  SESSION_PROMPT.md  WAVES.md  bug-010-research-prompt.md
ccmux-client/: Cargo.toml
ccmux-client/src/: cli.rs  connection.rs  input.rs  main.rs  ui.rs
ccmux-client/src/connection/: client.rs  handler.rs
ccmux-client/src/input/: commands.rs  keys.rs  mod.rs
ccmux-client/src/ui/: app.rs  event.rs  layout.rs  pane.rs  status.rs  status_pane.rs
ccmux-compat/src/: client.rs
ccmux-compat/src/commands/: session.rs
ccmux-protocol/: Cargo.toml
ccmux-protocol/src/: codec.rs  lib.rs  messages.rs  types.rs
ccmux-server/: Cargo.toml
ccmux-server/src/: beads.rs  claude.rs  config.rs  main.rs  parser.rs  persistence.rs  pty.rs  registry.rs  reply.rs  session.rs  tcp.rs
ccmux-server/src/agents/: mod.rs
ccmux-server/src/claude/: detector.rs  (+1 more)
ccmux-utils/: Cargo.toml
ccmux-utils/src/: error.rs  lib.rs  logging.rs  paths.rs
docs/: AGENT_COOPERATION.md  HANDOFF.md  QUICKSTART.md  TROUBLESHOOTING.md  gastown-integration-analysis.md
docs/architecture/: CLAUDE_INTEGRATION.md  GASTOWN_REMOTE_SUPPORT.md  MCP_WORKER_MODE.md  OBSERVABILITY.md
docs/design/: DESIGN_PRINCIPLES.md  INVARIANTS.md  WHY_CCMUX.md  control_plane.md
feature-management/: DEPLOYMENT_PLAN.md
feature-management/bugs/: bugs.md
feature-management/features/: features.md
feature-management/inquiries/: inquiries.md
scripts/: migrate-featmgmt-to-beads.sh
(+252 files in other folders)
